--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 body {
-    background-color: rgba(25, 25, 25, 0.5);
+    background-color: #e5e5e5;
+    color: #212121;
 }
+/* основной текст #212121*/
+/* вторичный текст #757575*/
+/*акцент #FFFFFF*/
+/*логотип #2196F3*/
 
 * {
     margin: 0;
