--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --footer-color: #2f303a;
 }
 body {
-  background-color: var(--color-backg);
+  background-color: var(--link-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
